# zpenflow

./: .gitignore  Cargo.toml  README.md  README.zh-CN.md
.github/workflows/: ci.yml  release.yml
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/dev/penflow/: MainActivity.kt  PenInputCapture.kt  PenflowClient.kt  Protocol.kt  UsbAccessoryConnection.kt  (+1 more)
android/app/src/main/res/values/: ic_launcher_background.xml
android/app/src/main/res/xml/: accessory_filter.xml
apps/penflow-gui/src-tauri/: tauri.conf.json
apps/penflow-gui/src-tauri/icons/: icon.icns
apps/penflow-gui/src-tauri/src/: main.rs  service.rs  settings.rs
apps/penflow-gui/src-tauri/wix/: vdd-install.wxs
apps/penflow-gui/ui/src/: App.jsx
crates/penflow-core/: Cargo.toml
crates/penflow-core/examples/: adapter_topology.rs  inject_probe.rs  mf_idr_probe.rs
crates/penflow-core/src/: color.rs  d3d11.rs  error.rs  lib.rs  monitors.rs  packet_queue.rs  pipeline.rs
crates/penflow-core/src/capture/: dxgi.rs  mod.rs
crates/penflow-core/src/encoder/: mf.rs  mod.rs
crates/penflow-core/src/inject/: mod.rs  win_ink.rs
crates/penflow-protocol/: Cargo.toml
crates/penflow-protocol/src/: lib.rs
crates/penflow-server/: Cargo.toml
crates/penflow-server/examples/: run_session.rs
crates/penflow-server/src/: diag.rs  lib.rs  session.rs  vdd.rs
crates/penflow-transport/: Cargo.toml
crates/penflow-transport/src/: adb.rs  lib.rs  usb_aoa.rs  util.rs  wireless.rs
docs/: HANDOFF.md  design.md  vdd-stuck.md
installer/: fetch-adb.ps1
tools/vdd/: README.md  vdd_settings.xml
